0.Dev Training/1.Junior/1. Base Demo/7.从CVS文件导入数据/readme.txt
readCSV.py  实现下面的功能

  1. 打开 2_1.csv 文件

  2. 首先读取文件头

  3. 然后读取剩余行

  4. 当发生错误的时候抛出异常

  读取完 所有内容后, 打印文件头和其余所有行

. 执行

  e:\...\> python readCSV.py

    File "readCSV.py", line 15
    except:
         ^
SyntaxError: invalid syntax

  奇怪, 总是出现语法错误？？？

. 需要注意的是python 对 缩进格式也是要求的.

  